# ETe

./: .gitignore  .travis.yml  BUILD.md  README.md  appveyor.bat  appveyor.yml  deploy_rsa.enc  ioq3-CREDITS.txt  travis-linux-cmake.sh  travis-linux.sh  travis-macos.sh
src/: CMakeLists.txt  SConscript.cgame  SConscript.core  SConscript.curl  SConscript.game  SConscript.ui  SConstruct  linux_build.sh  wolf.sln  wolf.vcproj  wolf.vcxproj  wolf.vcxproj.filters  wolfded.vcxproj  wolfded.vcxproj.filters
src/botai/: ai_cmd.c  ai_dmq3.c  ai_main.c  ai_script.c  ai_team.c
src/botlib/: be_aas_move.c  be_aas_reach.c  be_aas_route.c  be_aas_routetable.c  be_ai_chat.c  be_ai_goal.c  be_ai_weap.c  be_ea.c  be_interface.c  be_interface.h  botlib.h  botlib.vcxproj  botlib.vcxproj.filters  l_libvar.c  l_libvar.h  l_log.h  l_memory.c  l_memory.h  l_precomp.c  l_precomp.h  l_script.c  l_script.h
src/cgame/: cg_atmospheric.c  cg_character.c  cg_commandmap.c  cg_consolecmds.c  cg_debriefing.c  cg_draw.c  cg_effects.c  cg_ents.c  cg_event.c  cg_fireteamoverlay.c  cg_fireteams.c  cg_flamethrower.c  cg_info.c  cg_limbopanel.c  cg_loadpanel.c  cg_local.h  cg_localents.c  cg_main.c  cg_newDraw.c  cg_particles.c  cg_players.c  cg_playerstate.c  cg_predict.c  cg_public.h  cg_scoreboard.c  cg_servercmds.c  cg_snapshot.c  cg_sound.c  cg_spawn.c  cg_syscalls.c  cg_trails.c  cg_view.c  cg_weapons.c  cg_window.c  cgame.vcxproj  cgame.vcxproj.filters  tr_types.h
src/client/: cl_avi.c  cl_cgame.c  cl_cin.c  cl_console.c  cl_curl.c  cl_curl.h  cl_discord.c  cl_input.c  cl_jpeg.c  cl_keys.c  cl_main.c  cl_net_chan.c  cl_parse.c  cl_scrn.c  cl_tc_vis.c  cl_ui.c  client.h  keys.h  snd_adpcm.c  snd_codec.c  snd_codec.h  snd_codec_wav.c  snd_dma.c  snd_local.h  snd_main.c  snd_mem.c  snd_mix.c  snd_public.h
src/cmake/toolchains/: linux-i686.cmake
src/curl-7.58.0/: Makefile  Makefile.am  cmake-curl.sh  config.status  curl-config  curl-config.in  libcurl.pc  libtool  ltmain.sh
src/curl-7.58.0/.pc/: applied-patches
src/curl-7.58.0/debian/patches/: CVE-2018-1000120.patch
src/curl-7.58.0/docs/: Makefile
src/curl-7.58.0/docs/cmdline-opts/: Makefile
src/curl-7.58.0/docs/examples/: Makefile  Makefile.am
src/curl-7.58.0/include/: Makefile
src/curl-7.58.0/lib/: Makefile  Makefile.am  curl_config.h  ftp.c  http.c  libcurl.vers  smtp.c  transfer.c
src/curl-7.58.0/m4/: curl-compilers.m4
src/curl-7.58.0/scripts/: Makefile
src/curl-7.58.0/src/: Makefile  Makefile.am
src/curl-7.58.0/tests/: Makefile  Makefile.am  configurehelp.pm
src/extractfuncs/: extractfuncs.vcxproj  extractfuncs.vcxproj.filters
src/game/: be_ea.h  bg_animation.c  bg_animgroup.c  bg_misc.c  bg_pmove.c  bg_public.h  bg_tracemap.c  botlib.h  g_active.c  g_bot.c  g_character.c  g_client.c  g_cmds.c  g_cmds_ext.c  g_combat.c  g_items.c  g_local.h  g_main.c  g_match.c  g_mem.c  g_misc.c  g_missile.c  g_mover.c  g_props.c  g_public.h  g_referee.c  g_script.c  g_script_actions.c  g_session.c  g_spawn.c  g_stats.c  g_svcmds.c  g_syscalls.c  g_systemmsg.c  g_target.c  g_team.c  g_team.h  g_trigger.c  g_utils.c  g_vote.c  (+3 more)
src/jpeg-8c/: libjpeg.vcxproj  libjpeg.vcxproj.filters
src/null/: null_client.c  null_input.c  null_snddma.c
src/qcommon/: cm_load.c  cm_local.h  cm_patch.c  cm_patch.h  cm_polylib.c  cm_polylib.h  cm_public.h  cm_test.c  cm_trace.c  cmd.c  common.c  cvar.c  dl_main_curl.c  dl_public.h  files.c  gameinfo.c  history.c  huffman.c  huffman_static.c  keys.c  lexer.c  lexer.h  md4.c  md5.c  msg.c  net_chan.c  net_ip.c  parser.c  parser.h  q_math.c  q_platform.h  q_shared.c  q_shared.h  qcommon.h  qfiles.h  unzip.c  unzip.h  vm.c  vm_local.h
src/renderer/: anorms256.h  glext.h  qgl.h  qgl_linked.h  renderer.vcxproj  renderer.vcxproj.filters  tr_animation_mdm.c  tr_animation_mds.c  tr_arb.c  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_cmesh.c  tr_common.h  tr_curve.c  tr_decals.c  tr_flares.c  tr_font.c  tr_image.c  tr_image_bmp.c  tr_image_jpg.c  tr_image_pcx.c  tr_image_png.c  tr_image_tga.c  tr_init.c  tr_light.c  tr_local.h  tr_main.c  tr_marks.c  tr_mesh.c  tr_model.c  tr_model_iqm.c  tr_noise.c  tr_public.h  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_shadows.c  tr_sky.c  (+4 more)
src/renderercommon/: tr_font.c  tr_image_bmp.c  tr_image_jpg.c  tr_image_pcx.c  tr_image_png.c  tr_image_svg.c  tr_image_tga.c  tr_noise.c  tr_public.h  tr_types.h
src/renderervk/: tr_backend.c  tr_bsp.c  tr_cmds.c  tr_common.h  tr_decals.c  tr_image.c  tr_init.c  tr_local.h  tr_main.c  tr_marks.c  tr_model.c  tr_model_iqm.c  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_shadows.c  tr_sky.c  tr_surface.c  tr_world.c  vk.c  vk.h  vk_flares.c  vk_vbo.c
src/sdl/: sdl_glimp.c  sdl_icon.h  sdl_input.c  sdl_snd.c  sdl_version.c
src/server/: server.h  sv_bot.c  sv_ccmds.c  sv_client.c  sv_filter.c  sv_game.c  sv_init.c  sv_main.c  sv_net_chan.c  sv_snapshot.c  sv_world.c  tlds.h
src/splines/: Splines.vcxproj  Splines.vcxproj.filters  q_shared.c  q_splineshared.h  splines.cpp  splines.h
src/ui/: keycodes.h  ui.vcxproj  ui.vcxproj.filters  ui_atoms.c  ui_gameinfo.c  ui_loadpanel.c  ui_local.h  ui_main.c  ui_players.c  ui_public.h  ui_shared.c  ui_shared.h  ui_syscalls.c
src/unix/: linux_glimp.c  linux_local.h  linux_qgl.c  linux_qvk.c  linux_signals.c  linux_snd.c  qasm.h  unix_glw.h  unix_main.c  unix_shared.c
src/win32/: VersionHelpers.h  glw_win.h  win_dpi.c  win_eh.cpp  win_gamma.c  win_glimp.c  win_input.c  win_local.h  win_main.c  win_net.c  win_qgl.c  win_qvk.c  win_shared.c  win_snd.c  win_syscon.c  win_wndproc.c  winquake.rc  wolfet.manifest
src/win32/msvc2017/: Splines.vcxproj  Splines.vcxproj.filters  botlib.vcxproj  botlib.vcxproj.filters  cgame.vcxproj  cgame.vcxproj.filters  game.vcxproj  game.vcxproj.filters  libjpeg.vcxproj  libjpeg.vcxproj.filters  renderer.vcxproj  renderer.vcxproj.filters  renderervk.vcxproj  renderervk.vcxproj.filters  steam.vcxproj  steam.vcxproj.filters  ui.vcxproj  ui.vcxproj.filters  wolf.sln  wolf.vcxproj  wolf.vcxproj.filters  wolfded.vcxproj  wolfded.vcxproj.filters
(+28 files in other folders)
